# first_module

./: .gitignore  main.py  pyproject.toml
src/asyncHTTPrequest/: asyncHTTPrequest.py
src/asyncHTTPrequest2/: asyncHTTPrequest.py
src/cachingDecorator/: decorator_task.py
src/parallelProcessingNumericalData/: parallelProcessingNumericalData.py
src/singltone/: singltone.py  singltoneImport.py
src/wsgi/: wsgi.py
src/сlassAttributes/: classAttributes.py
