[project]
name = "first-module"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.13",
    "matplotlib>=3.10.1",
    "requests>=2.32.3",
    "ruff>=0.9.9",
    "tk>=0.1.0",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

